Simple small changes to sass - & Finally solve .wrap overflow problem

--- a/css/parts/footer.sass
+++ b/css/parts/footer.sass
@@ -1,5 +1,6 @@
 //navigation elements
 footer.footer
+  position: relative
   .fix
     padding: 2em 0
     @include media ($small-screen)
@@ -22,4 +23,3 @@ footer.footer
     margin: 1em auto
     img
       text-align: center
-
