--- a/css/parts/nav.sass
+++ b/css/parts/nav.sass
@@ -63,6 +63,7 @@ nav.main
     z-index: 1000
     padding: 0.5em 0
     background-color: white
+    @include box-shadow
     a
       font-size: 0.8em
       padding: 0.5em 2em
