--- a/css/style.sass
+++ b/css/style.sass
@@ -21,11 +21,10 @@
     @include span-columns(6)
 
 .wrap
-  overflow: hidden
   @include outer-container
-  padding: 0 1em
+  padding: 1em
   @include media($small-screen)
-    padding: 0 1em
+    padding: 1em
 
 .no-padding
   padding: 0 1em
